--- a/index.html
+++ b/index.html
@@ -8,43 +8,38 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="bootstrap-social.css"/>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <title>Mister GoodFood</title>
+        <title>MisterGoodFood</title>
     </head>
     <body class="container-fluid">
         <header class="row hidden-xs">
             <nav class="navbar navbar-default navbar-fixed-top col-sm-12">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand">Mister GoodFood</a>
+                        <a href="index.html" class="navbar-brand">MisterGoodFood</a>
                     </div>
                     <ul class="nav navbar-nav btn-group col-sm-3">
                         <li><a class="btn">Accueil</a></li>
                         <li><a class="btn">Catégories</a></li>
                         <li><a class="btn">Boutique</a></li>
                     </ul>
+                    
                     <form class="navbar-form navbar-left">
                         <ul class="nav navbar-nav btn-group" role="group">
-                            <li><a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter fa-inverse"></span></a></li>
+                            <li><a class="btn btn-social-icon btn-pinterest"><span class="fa fa-pinterest fa-inverse"></span></a></li>
                             <li><a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook fa-inverse"></span></a></li>
                             <li><a class="btn btn-social-icon btn-google"><span class="fa fa-google fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li><li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li>
-                            
+                            <li><a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram fa-inverse"></span></a></li> 
                         </ul>
                     </form>
                     <form class="navbar-form navbar-right" role="search">
-                        <div class="input-group">
-                            <input type="search" placeholder="Recherche" class="form-control"/>
-                            <div class="input-group-btn">
-                                <a class="btn btn-default "><span class="fa fa-search"></span></a>
-                            </div>        
-                        </div>
+                            <input type="email" placeholder="Votre e-mail" class="form-control"/>
+                            <div class="input-group">
+                                <input type="email" placeholder="Votre mot de passe" class="form-control"/>
+                                <div class="input-group-btn">
+                                    <a class="btn btn-default "><span class="fa fa-check-square"></span></a>
+                                </div>
+                            </div>
+                            <a class="btn btn-warning "><span class="fa fa-user"></span></a>
                     </form>
                 </div>
             </nav>
