Barre de navigation Mobile et tablette
Adaptation de la barre de navigation pour les mobiles et les tablette.
Erreurs : Problèmes d'agencement  pour les boutons sociaux une autre
place doit être trouvée.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
                     <a class="navbar-brand btn btn-warning col-xs-2"><span class="fa fa-user fa-inverse"></span></a>
                 </div>
                 <div class="collapse" id="collapsed">
-                    <p>Ici il y aura les liens comme sur la version ordi.... Et les liens pour les résaux sociaux.</p>
+                    <ul class="row nav navbar-nav btn-group col-xs-12">
+                        <li class="col-xs-12"><a class="btn">Accueil</a></li>
+                        <li class="col-xs-12"><a class="btn">Catégories</a></li>
+                        <li class="col-xs-12"><a class="btn">Boutique</a></li>
+                    </ul>
+                    <div class="row">
+                        <form class="col-xs-12 margin3" role="search">
+                            <div class="input-group">
+                                <input type="search" placeholder="Recherche" class="form-control"/>
+                                <div class="input-group-btn">
+                                    <a class="btn btn-default "><span class="fa fa-search"></span></a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </nav>
         </header>
