--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body class="container-fluid">
         <script src="bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-        <header class="container-fluid hidden-xs hidden-sm">
-            <nav class="navbar navbar-default navbar-fixed-top col-md-12">
+        <header class="row container-fluid hidden-xs hidden-sm">
+            <nav class="navbar navbar-inverse navbar-default navbar-fixed-top col-md-12">
                 <div class="row">
                     <a href="index.html" class="navbar-brand">MisterGoodFood</a>
                     <ul class="nav navbar-nav btn-group col-md-4">
@@ -42,8 +42,8 @@
                 </div>
             </nav>
         </header>
-        <header class="container-fluid hidden-md hidden-lg">
-            <nav class="navbar navbar-default navbar-fixed-top col-xs-12">
+        <header class="row container-fluid hidden-md hidden-lg">
+            <nav class="navbar navbar-inverse navbar-default navbar-fixed-top col-xs-12">
                 <div class="row">
                     <a role="button" data-toggle="collapse" href="#collapsed" class="navbar-brand btn bars col-xs-2"><span class="fa fa-bars"></span></a>
                     <div class="navabar-header col-xs-8">
@@ -70,5 +70,51 @@
                 </div>
             </nav>
         </header>
+        <div class="hidden-xs">
+            <section class="row background-spe">
+                <div>
+                    <h4 class="col-xs-4 col-xs-offset-4 newsletter text-center">Tu aimerais commencer l'aventure avec <strong>MisterGoodFood</strong> <br/> Il te suffit de t'inscrire à la newsletter</h4>
+                    <form class="col-xs-4 col-xs-offset-4">
+                        <input type="email" placeholder="xyz@exeample.com" class="margin form-control"/>
+                        <button type="submit" class="btn btn-default btn-warning marginco form-control">Commence l'aventure !</button>
+                    </form>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <h3 class="row">La ratatouille, une recette méconnue...</h3>
+                <h4 class="row">Peu de personne la cuisine, la ratatouile, pourtant elle a des capacités régénératrices hors du commun.</h4>
+                <div class="row bggrey">   
+                    <article class="col-sm-8">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus diam lectus, bibendum non interdum sed, placerat vitae nisl. Ut nec laoreet urna, vel maximus dolor. Sed venenatis id lacus sed posuere. Mauris blandit aliquam lectus, a varius nulla. Vivamus dictum ligula eu orci viverra, id vehicula lectus convallis. Donec cursus, neque non pellentesque porta, sem risus dignissim libero, nec ultricies dolor quam eu libero. Etiam porttitor aliquet facilisis. Etiam id magna vitae risus tincidunt porttitor nec ut lacus. Nam quis neque urna. Aliquam pretium lectus at purus ullamcorper, ut cursus nunc eleifend. Etiam at scelerisque arcu. Suspendisse consectetur dolor ut consectetur sollicitudin. Donec condimentum risus in tristique maximus. Integer dignissim semper tellus vel aliquet.
+
+    Mauris ut mauris accumsan, venenatis libero a, aliquam arcu. Pellentesque non faucibus ipsum. Proin at quam a erat volutpat aliquet quis sed magna. Duis pulvinar egestas orci, id venenatis eros tincidunt a. Sed id eros felis. Curabitur ut pharetra enim. Phasellus ut lorem non mi rutrum aliquam eu et lorem. Aliquam posuere ex nec justo eleifend rutrum. Mauris eu porta enim. Mauris nec est id nibh auctor sagittis. Donec sit amet placerat arcu. Nullam et massa purus. Morbi turpis turpis, sodales ac vehicula vel, commodo eu mauris. Nunc volutpat aliquam consequat.
+
+    Pellentesque malesuada est eget sem dignissim, ut ultrices lacus cursus. Morbi turpis mauris, vestibulum non purus eget, dapibus hendrerit est. Etiam eget aliquet felis, quis interdum lacus. Pellentesque dignissim lacus sit amet enim mollis mollis. Curabitur eros nisi, venenatis sit amet suscipit a, volutpat eget velit. Donec ac finibus justo. Pellentesque elementum, tellus vel lacinia pellentesque, lacus tortor iaculis magna, a vulputate tortor arcu vel felis. Curabitur tempor ac lacus vitae venenatis. Vestibulum eget placerat felis. Cras porttitor lectus eros, vel gravida neque tempor ac. Nam tempus leo vel eros malesuada, quis porta libero feugiat. Quisque tincidunt libero ac pretium tempor.
+                        </p>
+                    </article>
+                    <aside class="col-sm-4">
+                        <h4 class="text-center">La recette</h4>
+                        <ul class="recette">
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <li>4 patates</li>
+                            <li>Une pincée de sucre</li>
+                            <br/>
+                        </ul>
+                    </aside>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
