--- a/index.html
+++ b/index.html
@@ -80,41 +80,31 @@
                     </form>
                 </div>
             </section>
-            <section class="container-fluid">
-                <h3 class="row">La ratatouille, une recette méconnue...</h3>
-                <h4 class="row">Peu de personne la cuisine, la ratatouile, pourtant elle a des capacités régénératrices hors du commun.</h4>
-                <div class="row bggrey">   
-                    <article class="col-sm-8">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus diam lectus, bibendum non interdum sed, placerat vitae nisl. Ut nec laoreet urna, vel maximus dolor. Sed venenatis id lacus sed posuere. Mauris blandit aliquam lectus, a varius nulla. Vivamus dictum ligula eu orci viverra, id vehicula lectus convallis. Donec cursus, neque non pellentesque porta, sem risus dignissim libero, nec ultricies dolor quam eu libero. Etiam porttitor aliquet facilisis. Etiam id magna vitae risus tincidunt porttitor nec ut lacus. Nam quis neque urna. Aliquam pretium lectus at purus ullamcorper, ut cursus nunc eleifend. Etiam at scelerisque arcu. Suspendisse consectetur dolor ut consectetur sollicitudin. Donec condimentum risus in tristique maximus. Integer dignissim semper tellus vel aliquet.
-
-    Mauris ut mauris accumsan, venenatis libero a, aliquam arcu. Pellentesque non faucibus ipsum. Proin at quam a erat volutpat aliquet quis sed magna. Duis pulvinar egestas orci, id venenatis eros tincidunt a. Sed id eros felis. Curabitur ut pharetra enim. Phasellus ut lorem non mi rutrum aliquam eu et lorem. Aliquam posuere ex nec justo eleifend rutrum. Mauris eu porta enim. Mauris nec est id nibh auctor sagittis. Donec sit amet placerat arcu. Nullam et massa purus. Morbi turpis turpis, sodales ac vehicula vel, commodo eu mauris. Nunc volutpat aliquam consequat.
-
-    Pellentesque malesuada est eget sem dignissim, ut ultrices lacus cursus. Morbi turpis mauris, vestibulum non purus eget, dapibus hendrerit est. Etiam eget aliquet felis, quis interdum lacus. Pellentesque dignissim lacus sit amet enim mollis mollis. Curabitur eros nisi, venenatis sit amet suscipit a, volutpat eget velit. Donec ac finibus justo. Pellentesque elementum, tellus vel lacinia pellentesque, lacus tortor iaculis magna, a vulputate tortor arcu vel felis. Curabitur tempor ac lacus vitae venenatis. Vestibulum eget placerat felis. Cras porttitor lectus eros, vel gravida neque tempor ac. Nam tempus leo vel eros malesuada, quis porta libero feugiat. Quisque tincidunt libero ac pretium tempor.
-                        </p>
-                    </article>
-                    <aside class="col-sm-4">
-                        <h4 class="text-center">La recette</h4>
-                        <ul class="recette">
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <li>4 patates</li>
-                            <li>Une pincée de sucre</li>
-                            <br/>
-                        </ul>
-                    </aside>
-                </div>
-            </section>
+        </div>
+        <div class="row backtitle">
+            <h1 class="white text-center">La ratatouille : la recette minceur !</h1>
+        </div>
+        <div>
+            <div class="well col-sm-8 col-xs-12 minHieght">
+                <h3>Pas très diffilce à faire, la ratatouille est délicieuse.</h3>
+                <ul>
+                    <li>Taillez les légumes en dés.</li>
+                    <li>Hachez l’ail et l’oignon. Dans une cocotte à feu moyen, avec un filet d’huile d’olive, faites revenir les oignons et l’ail pendant quelques minutes.</li>
+                    <li>Toutes les 2 minutes, rajoutez les légumes taillés en dés en commençant par l’aubergine, puis en ajoutant les poivrons, les courgettes et enfin les tomates.</li>
+                    <li>Terminez en ajoutant la Marmite de Bouillon® Légumes KNORR® et laissez mijoter environ 15 min.</li>
+                    <li>Rectifiez l’assaisonnement et servez.</li>
+                </ul>
+            </div>
+            <div class="col-sm-4 col-xs-12 well minHeight">
+                <h3>Ingrédients</h3>
+                <ul>
+                    <li>Poivrons Jaune</li>
+                    <li>Tomates</li>
+                    <li>Ognions</li>
+                    <li>Aubergine</li>
+                    <li>Poivrons rouges</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
