Atricle Une avncée considérable PHASE 1

--- a/index.html
+++ b/index.html
@@ -85,25 +85,51 @@
             <h1 class="white text-center">La ratatouille : la recette minceur !</h1>
         </div>
         <div>
-            <div class="well col-sm-8 col-xs-12 minHieght">
-                <h3>Pas très diffilce à faire, la ratatouille est délicieuse.</h3>
-                <ul>
-                    <li>Taillez les légumes en dés.</li>
-                    <li>Hachez l’ail et l’oignon. Dans une cocotte à feu moyen, avec un filet d’huile d’olive, faites revenir les oignons et l’ail pendant quelques minutes.</li>
-                    <li>Toutes les 2 minutes, rajoutez les légumes taillés en dés en commençant par l’aubergine, puis en ajoutant les poivrons, les courgettes et enfin les tomates.</li>
-                    <li>Terminez en ajoutant la Marmite de Bouillon® Légumes KNORR® et laissez mijoter environ 15 min.</li>
-                    <li>Rectifiez l’assaisonnement et servez.</li>
-                </ul>
-            </div>
-            <div class="col-sm-4 col-xs-12 well minHeight">
-                <h3>Ingrédients</h3>
-                <ul>
-                    <li>Poivrons Jaune</li>
-                    <li>Tomates</li>
-                    <li>Ognions</li>
-                    <li>Aubergine</li>
-                    <li>Poivrons rouges</li>
-                </ul>
+            <div class="row backune">
+                <article class=" padding col-sm-8">
+                    <p><span class="big">E</span>lle s'appelle Ratatouille, elle à été inventé en 1875 par Marie Loucheur le Grand, qui à par flemme à mélangé à peut près tout les légumes de son faible garde manger dans un selle casserole. Trouvant cela bon il l'a fait gouter à tous ses amis. Il l'a ensuite nomm la soupe du pauvre flemmard. Car un pauvre  n'avait que les qelques légumes qu'il y a dans la ratatouille et c'est un soupe de flemmard, même pas mixée. et un flemmard est pauvre d'esprit. Après cela il écrivit un roman de cuisine (oui oui ! pas un livre !) la cuisine du flemmard avec tout ses trucs et astcues pour s'économiser des mouvements.</p>
+                    <p>Dans la même  catégorie on connaît la ratatouille, le cake au saumon, et autre qui nous viennent tous de lui.</p>
+                    <div class="well table-responsive">
+                    <table class="table table-striped table-bordered table-recette">
+                        <thead class="table-head">
+                            <tr>
+                                <th>Etape</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Emincez les ognions</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                </article>
+                <aside class="col-sm-4">
+                ASIDE
+                </aside>
+                
             </div>
         </div>
     </body>
